--- a/lib/amplify-export-mytodoapp/category-stack-mapping.json
+++ b/lib/amplify-export-mytodoapp/category-stack-mapping.json
@@ -3,5 +3,10 @@
     "category": "api",
     "resourceName": "mytodoapp",
     "service": "AppSync"
+  },
+  {
+    "category": "auth",
+    "resourceName": "mytodoapp3e538e90",
+    "service": "Cognito"
   }
 ]
